--- a/css/leon.css
+++ b/css/leon.css
@@ -7,6 +7,7 @@
   --main-section-padding: 60px;
   /* --main-section-color: #FFC107; */
   --main-section-color: #f6f6f6;
+  --accent-color: #FFC107;
   --duration: 300ms;
 }
 * {
@@ -51,18 +52,18 @@ body {
 /* End global rules */
 /* Start components */
 .special-headings {
-  color: #ebeced;
+  color: var(--accent-color);
   font-size: 100px;
   text-align: center;
   font-weight: 800;
   letter-spacing: -3px;
-  margin: 0;
+  margin-bottom: 0;
 }
 .special-headings + p {
-  margin: -30px 0 0;
+  margin: 0;
   font-size: 20px;
   text-align: center;
-  color: #797979;
+  color: #000000;
 }
 @media (max-width: 767px) {
   .special-headings {
