--- a/css/leon.css
+++ b/css/leon.css
@@ -154,13 +154,17 @@ body {
 /* Start Landing Section */
 .landing {
   height: calc(100vh - 64px);
-  background-image: url(../images/mountain.jpeg);
+  background-image: url(../images/ship.jpg);
   background-size: cover;
+  /* margin-bottom: 100; */
   position: relative;
+}
+.landing .logo {
+  width: 160px;
 }
 .landing .intro-text {
   position: absolute;
-  top: 50%;
+  top: 25%;
   left: 50%;
   text-align: center;
   transform: translate(-50%, -50%);
