--- a/css/leon.css
+++ b/css/leon.css
@@ -495,3 +495,19 @@ footer {
   color: var(--accent-color);
 }
 /* End Footer */
+/* Whatsapp floatin icon */
+.whatsapp-icon {
+  position: fixed;
+  bottom: 70px; /* Adjust the distance from the bottom */
+  right: 50px; /* Adjust the distance from the right */
+  z-index: 1000; /* Ensure it sits above other content */
+  background-color: green;
+  padding: 10px;
+  border-radius: 50%;
+}
+
+.whatsapp-icon i {
+  font-size: 3.2em;
+  color: #fff;
+}
+
