--- a/css/leon.css
+++ b/css/leon.css
@@ -85,6 +85,7 @@ img {
   z-index: 1000; 
   background-color: #fff;
   width: 100%;
+  box-shadow: 0px 0px 11px 1px #0000003d;
 }
 .header .container {
   display: flex;
@@ -93,13 +94,20 @@ img {
 }
 .header .logo {
   width: 60px;
-  margin: 20px 10px;
+  /* margin: 20px 10px; */
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+  padding: 0;
 }
 .header .header-links {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  align-items: stretch;
+  align-items: center;
+  flex-grow: 1;
+  flex-basis: auto;
 }
 @media (max-width: 1200px) {
   .header .header-links {
@@ -550,4 +558,31 @@ footer {
   font-size: 3.2em;
   color: #fff;
 }
+
+/* Initially hide mobile link */
+.whatsapp-mobile {
+  display: none;
+}
+
+/* For larger screens, hide the mobile link and show the desktop link */
+@media (min-width: 768px) {
+  .whatsapp-desktop {
+    display: block;
+  }
+  .whatsapp-mobile {
+    display: none;
+  }
+}
+
+/* For smaller screens, show the mobile link and hide the desktop link */
+@media (max-width: 767px) {
+  .whatsapp-desktop {
+    display: none;
+  }
+  .whatsapp-mobile {
+    display: block;
+    font-size: 1.2em;
+  }
+}
+
 
