--- a/css/leon.css
+++ b/css/leon.css
@@ -203,12 +203,83 @@ img {
 }
 /* End Header */
 /* Start Landing Section */
-.landing {
-  height: calc(100vh - 64px);
-  background-image: url(../images/ship.jpg);
+/* .landing { */
+  /* background-image: url(../images/ship.jpg); */
+  /* height: calc(100vh - 64px);
   background-size: cover;
   position: relative;
-  background-position: center;
+  background-position: center; */
+  /* overflow: hidden; */
+/* } */
+.slider {
+  position: relative;
+
+}
+
+.slides img {
+  display: none;
+  width: 100%;
+}
+.slides .slide1 {
+  display: block;
+  width: 100%;
+}
+
+.btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  font-size: 2em;
+  cursor: pointer;
+}
+
+.slider .prev {
+  margin-left: 10px;
+}
+.slider .next {
+  margin-right: 10px;
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
+
+.slide {
+  height: calc(100vh - 64px);
+  width: 100%; 
+  flex-shrink: 0;
+  background-size: cover;
+}
+/* #slide-1 { */
+  /* background-image: url(../images/ship.jpg); */
+/* } */
+/* #slide-2 { */
+  /* background-image: url(../images/01.webp); */
+/* } */
+/* #slide-3 { */
+  /* background-image: url(../images/02.webp); */
+/* } */
+
+/* @keyframes slide {
+  0% { transform: translateX(0); }
+  33% { transform: translateX(-100%); }
+  66% { transform: translateX(-200%); }
+  100% { transform: translateX(-300%); }
+} */
+.landing::before {
+  content: "";
+  background-color: rgba(255, 255, 255, 0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 .landing .logo {
   width: 160px;
@@ -473,7 +544,7 @@ img {
 .contact {
   padding-top: var(--main-section-padding);
   padding-bottom: calc(var(--main-section-padding) * 2);
-  background-color: var(--main-section-color);
+  background-color: var(--secondary-color);
 }
 .contact .section-body {
   margin-top: 60px;
@@ -486,14 +557,14 @@ img {
   }
 }
 .contact .section-body h2 {
-  color: var(--secondary-color);
+  color: #fff;
   font-size: 35px;
   font-weight: 800;
   letter-spacing: -2px;
   margin-bottom: 20px;
 }
 .contact .section-body a {
-  color: var(--main-color);
+  color: var(--main-section-color);
   margin: 15px 20px;
   font-size: 25px;
   font-weight: 800;
@@ -502,6 +573,9 @@ img {
 }
 .contact .section-body .social {
   margin: 15px 0px;
+}
+.contact .section-body a.social i{
+  color: #fff;
 }
 .contact .section-body .contacts {
   display: flex;
@@ -520,13 +594,19 @@ img {
   }
 }
 .contact .section-body .contacts p {
-  color: var(--secondary-color);
+  color: var(--main-section-color);
   font-size: 20px;
 }
 .contact .section-body .contacts i {
   margin-left: 20px;
   color: var(--secondary-color);
   cursor: pointer;
+}
+.contact .desc {
+  color: #ddd;
+}
+.address {
+  color: var(--accent-color) !important;
 }
 /* End Contact Section */
 /* Start Footer */
@@ -538,6 +618,7 @@ footer {
   justify-content: center;
   align-items: center;
   font-size: 10px;
+  border-top: 2px var(--accent-color) solid;
 }
 .emarkets {
   color: var(--accent-color);
@@ -567,7 +648,7 @@ footer {
 /* For larger screens, hide the mobile link and show the desktop link */
 @media (min-width: 768px) {
   .whatsapp-desktop {
-    font-size: 3.2em;
+    font-size: 2.2em;
     display: block;
   }
   .whatsapp-mobile {
