--- a/css/leon.css
+++ b/css/leon.css
@@ -213,48 +213,43 @@ img {
 /* } */
 .slider {
   position: relative;
-
+  height: calc(100vh - 64px); /* Same height as the viewport minus the navbar */
 }
-
+.slides {
+  position: relative;
+  height: 100%; /* Make slides container the same height as the slider */
+  overflow: hidden;
+}
 .slides img {
-  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%; /* Make each slide the same height as the slider */
+  opacity: 0;
+  transition: opacity 1s ease-in-out; /* Animate opacity changes */
 }
-.slides .slide1 {
-  display: block;
-  width: 100%;
+.slides img.active {
+  opacity: 1; /* Make active slide fully opaque */
 }
-
 .btn {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   background-color: transparent;
+  color: white;
   border: none;
   font-size: 2em;
   cursor: pointer;
 }
 
-.slider .prev {
-  margin-left: 10px;
-}
-.slider .next {
-  margin-right: 10px;
-}
-
 .prev {
-  left: 0;
+  margin-left: 10px;
+  left:0;
 }
-
 .next {
-  right: 0;
-}
-
-.slide {
-  height: calc(100vh - 64px);
-  width: 100%; 
-  flex-shrink: 0;
-  background-size: cover;
+  margin-right: 10px;
+  right:0;
 }
 /* #slide-1 { */
   /* background-image: url(../images/ship.jpg); */
