--- a/css/leon.css
+++ b/css/leon.css
@@ -246,10 +246,12 @@ img {
 .prev {
   margin-left: 10px;
   left:0;
+  z-index: 10;
 }
 .next {
   margin-right: 10px;
   right:0;
+  z-index: 10;
 }
 /* #slide-1 { */
   /* background-image: url(../images/ship.jpg); */
@@ -267,6 +269,16 @@ img {
   66% { transform: translateX(-200%); }
   100% { transform: translateX(-300%); }
 } */
+.slider::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
+  opacity: 0.5;
+}
 .landing::before {
   content: "";
   background-color: rgba(255, 255, 255, 0.3);
