--- a/css/leon.css
+++ b/css/leon.css
@@ -56,7 +56,7 @@ img {
 /* Start components */
 .special-headings {
   color: var(--accent-color);
-  font-size: 100px;
+  font-size: 5em;
   text-align: center;
   font-weight: 800;
   letter-spacing: -3px;
@@ -536,6 +536,9 @@ img {
   padding-bottom: calc(var(--main-section-padding) * 2);
   background-color: var(--secondary-color);
 }
+.contact i {
+  color: var(--accent-color);
+}
 .contact .section-body {
   margin-top: 60px;
   margin-left: 15%;
@@ -548,7 +551,7 @@ img {
 }
 .contact .section-body h2 {
   color: #fff;
-  font-size: 35px;
+  font-size: 2em;
   font-weight: 800;
   letter-spacing: -2px;
   margin-bottom: 20px;
@@ -556,16 +559,12 @@ img {
 .contact .section-body a {
   color: var(--main-section-color);
   margin: 15px 20px;
-  font-size: 25px;
-  font-weight: 800;
+  font-size: 1.5em;
   letter-spacing: -1px;
   text-decoration: none;
 }
 .contact .section-body .social {
   margin: 15px 0px;
-}
-.contact .section-body a.social i{
-  color: #fff;
 }
 .contact .section-body .contacts {
   display: flex;
@@ -589,14 +588,10 @@ img {
 }
 .contact .section-body .contacts i {
   margin-left: 20px;
-  color: var(--secondary-color);
   cursor: pointer;
 }
 .contact .desc {
   color: #ddd;
-}
-.address {
-  color: var(--accent-color) !important;
 }
 /* End Contact Section */
 /* Start Footer */
