--- a/css/leon.css
+++ b/css/leon.css
@@ -224,7 +224,8 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; /* Make each slide the same height as the slider */
+  object-fit: cover;
+  height: calc(100vh - 77px); /* Make each slide the same height as the slider */
   opacity: 0;
   transition: opacity 1s ease-in-out; /* Animate opacity changes */
 }
@@ -369,6 +370,7 @@ img {
   top: -15%;
   right: -60%;
   border-radius: 10px;
+  box-shadow: 0px 0px 11px 1px #0000003d;
 }
 .services .graph::before {
   content: "";
@@ -380,6 +382,7 @@ img {
   background-size: cover;
   top: 10%;
   left: -120%;
+  box-shadow: 0px 0px 11px 1px #0000003d;
 }
 /* End Services */
 /* Start Portfolio */
@@ -439,10 +442,13 @@ img {
 }
 .portfolio button {
   width: 150px;
+  border-radius: 10px;
   position: absolute;
   bottom: -75px;
   padding: 20px;
-  font-weight: 800;
+  font-weight: 500;
+  background-color: var(--secondary-color);
+  color: #fff;
   left: 50%;
   transform: translateX(-50%);
   cursor: pointer;
@@ -479,6 +485,7 @@ img {
 }
 .about .content .shapes img {
   max-width: 300px;
+  box-shadow: 0px 0px 11px 1px #0000003d;
 }
 .about .content .shapes::before {
   content: "";
@@ -490,6 +497,7 @@ img {
   left: 20%;
   z-index: -1;
   border-radius: 10px;
+  box-shadow: 0px 0px 11px 1px #0000003d;
 }
 
 .about .content .shapes::after {
