Add hover effect to header links
Add hover effect to header links for underline and scale(1.05) transformation
on hover. Transition duration set to 100ms ease-out.

--- a/css/leon.css
+++ b/css/leon.css
@@ -120,6 +120,7 @@ img {
 }
 .header .header-links p{
   padding: 30px 10px;
+  transition: all 100ms ease-out;
 }
 .header .header-links a{
   font-size: 1.0em;
@@ -133,6 +134,7 @@ img {
 }
 .header .header-links p:hover{
   text-decoration: underline;
+  transform: scale(1.05);
   /* font-size: 1.1em; */
   /* font-weight: 800; */
 }
