--- a/css/leon.css
+++ b/css/leon.css
@@ -400,7 +400,7 @@ img {
 }
 .portfolio .projects .col:hover {
   box-shadow: 14px 15px 11px 5px #ddd;
-  transform: scale(1.05);
+  transform: scale(1.05) translateY(-10px);
 }
 .portfolio .projects .col .texts {
   padding: 20px;
