--- a/css/leon.css
+++ b/css/leon.css
@@ -37,6 +37,12 @@ img {
 .container img {
   box-shadow: 0px 0px 11px 1px #0000003d;
 }
+i {
+  transition: all 100ms ease-in-out;
+}
+i:hover {
+  transform: scale(1.2);
+}
 /* Small */
 @media (min-width: 768px) {
   .container {
@@ -354,27 +360,34 @@ img {
 /* With this percentage width & height
   the whole graph disappeares in small screens
   and that's what we want, instead of using media */
-.services .graph {
+.services .graph::before {
+  content: "";
   background-color: var(--secondary-color);
   width: 50%;
   height: 125%;
-  position: relative;
+  position: absolute;
   top: -15%;
-  right: -60%;
+  right: -20%;
   border-radius: 10px;
   box-shadow: 0px 0px 11px 1px #0000003d;
+  z-index: -1;
 }
-.services .graph::before {
-  content: "";
-  background-image: url(../images/app.jpg);
+.services .graph{
   border-radius: 10px;
-  position: absolute;
-  width: 200%;
+  position: relative;
+  width: 100%;
   height: 80%;
   background-size: cover;
   top: 10%;
-  left: -120%;
-  box-shadow: 0px 0px 11px 1px #0000003d;
+  right:  0%;
+}
+.services .graph img {
+  max-width: 100%;
+  background-size: cover;
+  transition: all 300ms ease-in-out;
+}
+.services .graph img:hover {
+  transform: scale(1.2);
 }
 /* End Services */
 /* Start Portfolio */
@@ -436,7 +449,11 @@ img {
   transform: translateX(-50%);
   cursor: pointer;
 }
-
+@media (max-width: 1200px) {
+  .services .graph {
+    width: 0%;
+  }
+}
 @media (max-width: 767px){
   .portfolio .projects img{
     height: fit-content;
@@ -472,7 +489,10 @@ img {
 }
 .about .content .shapes img {
   max-width: 300px;
-  box-shadow: 0px 0px 11px 1px #0000003d;
+  transition: all 300ms ease-in-out;
+}
+.about .content .shapes img:hover {
+  transform: scale(1.1);
 }
 .about .content .shapes::before {
   content: "";
