--- a/css/leon.css
+++ b/css/leon.css
@@ -367,7 +367,7 @@ i:hover {
   height: 125%;
   position: absolute;
   top: -15%;
-  right: -20%;
+  right:  -10%;
   border-radius: 10px;
   box-shadow: 0px 0px 11px 1px #0000003d;
   z-index: -1;
@@ -379,12 +379,13 @@ i:hover {
   height: 80%;
   background-size: cover;
   top: 10%;
-  right:  0%;
+  right: 0%;
 }
 .services .graph img {
   max-width: 100%;
   background-size: cover;
   transition: all 300ms ease-in-out;
+  position: relative;
 }
 .services .graph img:hover {
   transform: scale(1.2);
