Update background color in leon.css and fix image differences
Changed the background color variable in leon.css from --accent-color to
--secondary-color. Also, fixed image differences in ramadan.png file.

--- a/css/leon.css
+++ b/css/leon.css
@@ -127,7 +127,7 @@ i:hover {
 }
 .header .header-links p::before{
   content: "";
-  background-color: var(--accent-color);
+  background-color: var(--secondary-color);
   position: absolute;
   top: 0%;
   left: 0%;
