--- a/css/leon.css
+++ b/css/leon.css
@@ -622,26 +622,6 @@ i:hover {
 .pricing .col:hover{
   transform: scale(1.1);
 }
-/* .pricing .plans .col:first-of-type::after{
-  content: "";
-  position: absolute;
-  top: 0%;
-  right: -3px;
-  height: 100%;
-  margin: auto;
-  width: 1px;
-  background-color: var(--main-color);
-}
-.pricing .plans .col:nth-of-type(2)::after{
-  content: "";
-  position: absolute;
-  top: 0%;
-  right: -3px;
-  height: 100%;
-  margin: auto;
-  width: 1px;
-  background-color: var(--main-color);
-} */
 .pricing .texts{
   text-align: center;
 }
@@ -662,10 +642,18 @@ i:hover {
   background-color: var(--secondary-color);
   color: #fff;
   margin-bottom: 20px;
-  /* left: 50%; */
-  /* transform: translateX(-50%); */
-
   cursor: pointer;
+}
+@media (max-width: 767px){
+  .pricing .plans{
+    flex-direction: column;
+    align-items: center;
+    
+  }
+  .pricing .col{
+    width: 70%;
+    margin-top: 30px;
+  }
 }
 /* End Plans Section */
 /* Start Contact Section */
