--- a/css/leon.css
+++ b/css/leon.css
@@ -150,7 +150,7 @@ i:hover {
   transform: translateY(0%);
 }
 .header .header-links a{
-  font-size: 1.0em;
+  font-size: 1.0em; 
   font-weight: 600;
   background-color: transparent !important;
   color: var(--main-color);
@@ -162,6 +162,33 @@ i:hover {
 }
 .header .links {
   position: relative;
+}
+
+.header .header-links .store {
+  list-style: none;
+  width: 300px;
+  height: 100px;
+  position: absolute;
+  top: -200%;
+  right: 50px;
+  background-color: var(--secondary-color);
+  color: #fff;
+  transition: all 300ms ease-in-out;
+}
+.header .header-links .store li  {
+  margin-top: 5%;
+}
+.header .header-links .store li a {
+  color: #fff;
+}
+.header .header-links .store li a:hover {
+  padding-left: 25px;
+}
+.header .header-links .store-p:hover + .store, .header .header-links .store:hover {
+  display: flex;
+  top: 70%;
+  color: #fff;
+  z-index: 1;
 }
 @media (min-width: 993px) {
   .header .links {
