--- a/css/leon.css
+++ b/css/leon.css
@@ -173,20 +173,24 @@ i:hover {
   right: 50px;
   background-color: var(--main-section-color);
   color: var(--secondary-color);
-  display: none;
-  transition: all 300ms ease-in-out;
+  visibility: hidden;
+  transition: all 300ms linear;
+  opacity: 0;
 }
 .header .header-links .store li  {
   margin-top: 5%;
 }
 .header .header-links .store li a {
-  color: var(--secondary-color);
+  color: var(--main-color);
 }
 .header .header-links .store li a:hover {
   padding-left: 10px;
+  ;
 }
 .header .header-links .store-p:hover + .store, .header .header-links .store:hover {
   display: flex;
+  visibility: visible;
+  opacity: 1;
   top: 70%;
   color: #fff;
   z-index: 1;
